--- a/Credit Risk Modelling code.ipynb
+++ b/Credit Risk Modelling code.ipynb
@@ -36,7 +36,7 @@
     }
    ],
    "source": [
-    "loan_data = pd.read_csv('credit_risk_dataset.csv')"
+    "loan_data = pd.read_csv("C:\\Users\\ritam\\Downloads\\Dataset.csv")"
    ]
   },
   {
